[package]
name = "eg-pcf-macros"
version = "0.1.0"
authors = ["Dave O <davidobrite@gmail.com>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
pcf-parser = { version= "0.1.0", path = "../pcf-parser" }
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "1.3.1"
embedded-graphics = "0.7.1"
